Fix player 2 panel text vertical align

--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -103,6 +103,9 @@
   height: 235px;
 }
 
+#panel-vert-text-centr {
+  padding-top: 90px;
+}
 
 
 
